# aoc2024

./: .envrc  .gitignore  Cargo.toml  README.md  shell.nix  test.txt  test_day17.txt
benches/: benchmark.rs
src/: day1.rs  day10.rs  day2.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  math.rs  utils.rs
src/y2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day22.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
