[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
itertools = "0.13"
indexset = "0.5"
rustc-hash = "2.1"
indexmap = "2.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false